--- a/Cronograma.html
+++ b/Cronograma.html
@@ -454,7 +454,7 @@
     <div class="container">
         <div class="header">
             <h1>🚀 Cronograma de Estudio: Optimización en Computación Cuántica</h1>
-            <p class="subtitle">Programa de 4 Meses para Ingenieros Físicos</p>
+            <p class="subtitle">Programa de 4 Meses</p>
         </div>
 
         <div class="info-grid">
@@ -1193,4 +1193,5 @@
         });
     </script>
 </body>
+
 </html>
